# chatterbox

./: LICENSE  README.md  chatterbox.cabal  peers.json  stack.yaml
app/: Main.hs
doc/: Makefile  connecting.dot  progress.dot  states.dot
src/: Chatterbox.hs  Lib.hs
src/Chatterbox/: Cmd.hs  Types.hs
test/: Spec.hs
