name:                chatterbox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/edofic/chatterbox#readme
license:             BSD3
license-file:        LICENSE
author:              Andraz Bajt
maintainer:          edofic@gmail.com
copyright:           Copyright: (c) 2016 Andraz Bajt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , distributed-process
                     , hslogger
                     , network-transport
                     , network-transport-tcp
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable chatterbox-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , chatterbox
                     , optparse-applicative
                     , hslogger
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

test-suite chatterbox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , chatterbox
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/edofic/chatterbox
